--- a/source/_posts/2017-12-28-wu-ti.markdown
+++ b/source/_posts/2017-12-28-wu-ti.markdown
@@ -7,8 +7,8 @@ categories:
 ---
 今天跟朋友聊天，聊到自己最近的状态不是太好，因为不踏实所以略显犹疑。不踏实的原因自己心里也清楚，无非是选择难做，或者说明知道又要再次由着自己的性子来，产生的结果可以预知会又一次伤到自己的利益，或者是进一步加深自己在他人眼中蠢笨的印象，可事情还是会不可避免滑向这个方向。
 
-关于这点不是没有反省过的，毕竟都是社交动物，谁不想能聪明可爱，事事顺意呢？可是在各种明知后果的选择中，不论理智怎么衡量，最终都是选择了那个看似不好的结果。所以在大部分眼里，我可能就是一个做不对选择没有头脑的人，这样势必就会失去一些机会；不过一定要往好处想的话，可能就是容易吸引气味相投的人。我始终坚持做一个对自己真实的人，这里的真实不是指在任何情况下坚持说真话的诚实，而在于是否压倒一切地要求自己是真实的——是否应当不顾相反的压力，坚持做自己，哪怕这个自己有很多缺陷。这个真实无关于他者的期待，无关于道德，无关于他人的评价和声誉，甚至无关于形成一个稳定真实的印象从而更容易一起合作，而是在整个漫长的人生旅途中，我最后成为的那个人就是我希望成为的人。这中间的每一步，每一个选择反映的都是当下真实的我。
+关于这点不是没有反省过的，毕竟都是社交动物，谁不想能聪明可爱，事事顺意呢？可是在各种明知后果的选择中，不论理智怎么衡量，最终都是选择了那个看似不好的结果。所以在很多人眼里，我可能就是一个做不对选择没有头脑的人，势必就会失去一些机会；不过一定要往好处想的话，可能就是容易吸引气味相投的人。我始终坚持做一个对自己真实的人，这里的真实不是指在任何情况下坚持说真话的诚实，而在于是否压倒一切地要求自己是真实的——是否应当不顾相反的压力，坚持做自己，哪怕这个自己有很多缺陷。这个真实无关于他者的期待，无关于道德，无关于他人的评价和声誉，甚至无关于形成一个稳定真实的印象从而更容易一起合作，而是在整个漫长的人生旅途中，我最后成为的那个人就是我希望成为的人。这中间的每一步，每一个选择反映的都是当下真实的我。
 
-真实的自我其实是很难挖掘的东西，太多时候都被掩盖在了各种目的之下，连自己都不一定会察觉到。我一直在努力尝试使其暴露，至少是对自己，毕竟人要是自欺欺人起来，地球都可以是方的。这是一个痛苦的过程，要看到自己的劣根性和缺陷，同时还要识破自己潜意识下给自己找的借口，然后将这个真实的自己（部分）暴露出来。你可能会问：这有什么好处呢？是的，连我自己都想不出来这样做的好处是什么？可是我选择的本来就是真实，而不是好处啊。你要问我真实的好处是什么，我也答不出来，我只能说真的就应该是真的，这是我的样子，这是我选择活在这个世界上的方式。我就想看看，一个这样的我，死前会怎么回忆这一生。朋友说我有一种“把自己作死的执着”，这么想想也是没错。
+真实的自我其实是很难挖掘的东西，太多时候都被掩盖在了各种目的之下，连自己都不一定会察觉到。我一直在努力尝试使其暴露，至少是对自己，毕竟人要是自欺欺人起来，地球都可以是方的。这是一个痛苦的过程，要看到自己的劣根性和缺陷，同时还要识破自己潜意识下给自己找的借口，然后将这个真实的自己（部分）暴露出来。你可能会问：这有什么好处呢？是的，连我自己都想不出来这样做的好处是什么？可是我选择的本来就是真实，而不是好处啊。你要问我真实的好处是什么，我也答不出来，我只能说真的就应该是真的，这是我的样子，这是我选择活在这个世界上的方式。我就想看看，一个这样的我，最终会如何回忆这一生。朋友说我有一种“把自己作死的执着”，这么想想也是没错。
 
 但终究也是真的做不到看开一切，犹如此刻的犹疑和不甘。所以小记一笔，告诉自己，至少你得到的爱也是真实的，且这么行下去吧，少年。
